section4 : added token service

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source = dating.db"
   },
+  "TokenKey": "JustADummyJwtSecretKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
